# AnimeFileSorter

./: .gitignore  FIleSorterUI.py  FileRemover.py  FileSorter.py  LICENSE  main.py  move_back.bat  move_back.py  package-lock.json  package.json  pyproject.toml  readme.md  requirements.txt  start.bat
.cursor/rules/: mvc-srp.mdc  python.mdc
config/: default_config.json
docs/: develop_report.md  project_vision.md  road_map.md
docs/annual_reports/: start_here.md  summary.md  update_guidelines.md
docs/annual_reports/year1/: Q1.md  Q2.md  Q3.md  Q4.md  year1_report.md
docs/annual_reports/year2/: Q1.md  Q2.md  Q3.md  Q4.md  year2_report.md
docs/architecture/: overview.md  system_diagram.md
src/: FileSorterGUI.py  __init__.py  app.py  example_logger_usage.py  file_handler.py  file_organizer.py  log.py  main.py  test.py  title_cleaner.py  tmdb_handler.py
src/api/: __init__.py  anidb_client.py  anime_service.py
src/controllers/: __init__.py  file_controller.py
src/core/: __init__.py  app_config.py  config.py  file_utils.py
src/database/: __init__.py  db_manager.py
src/models/: __init__.py  database.py  episode_model.py  file_model.py  media_item.py  series_model.py  watch_history_model.py
src/services/: organizer_service.py  parser_service.py  scanner_service.py  setting_service.py
src/utils/: __init__.py  file_watcher.py  logger.py
src/views/: __init__.py  file_browser.py  login_dialog.py  main_window.py  metadata_view.py  progress_dialog.py  settings_dialog.py
tools/: __init__.py  generate_erd.py  init_database.py
utils/: logger.py
(+13 files in other folders)
