[tool.poetry]
name = "animefilesorter"
version = "0.1.0"
description = "A modern anime file organization tool with PySide6 GUI"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
pyside6 = "^6.6.1"
pydantic = "^2.5.3"
requests = "^2.31.0"
aiohttp = "^3.9.1"
pillow = "^10.1.0"
pyinstaller = {version = "^6.3.0", optional = true}

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-qt = "^4.2.0"
pytest-cov = "^4.1.0"
black = "^23.12.0"
isort = "^5.13.2"
mypy = "^1.7.1"
pylint = "^3.0.3"
mkdocs = "^1.5.3"
mkdocs-material = "^9.4.14"

[tool.poetry.extras]
deploy = ["pyinstaller"]

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
animefilesorter = "src.main:main" 